<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModelDataBinding"
            type="com.udacity.shoestore.viewModel.ViewModel" />
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <!--I used constraintLayout because it used to build Responsive UI-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".our_Fragments.DetailScreen">

        <TextView
            android:id="@+id/label_TV"
            android:text="Label Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/large_margin"/>

        <EditText
            android:id="@+id/shoe_Name_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@={shoe.name}"
            android:hint="@string/shoe_name"
            android:importantForAutofill="no"
            android:layout_margin="@dimen/margin"
            android:inputType="textPersonName"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_TV" />

        <EditText
            android:id="@+id/shoe_company_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:hint="@string/shoe_company"
            android:layout_marginEnd="@dimen/margin"
            android:textAlignment="center"
            android:text="@={shoe.company}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_Name_ET"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/shoe_Size_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:textAlignment="center"
            android:hint="@string/shoe_size"
            android:text="@={shoe.size}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_company_ET"
            app:layout_constraintStart_toStartOf="parent"
            android:inputType="number"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/shoe_Description_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:textAlignment="center"
            android:hint="@string/description"
            android:text="@={shoe.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_Size_ET"
            app:layout_constraintStart_toStartOf="parent"
            android:inputType="text"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/save_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="100dp"
            android:text="@string/save"
            android:onClick="@{() -> viewModelDataBinding.onButtonSaveClicked()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancel_Button"
            app:layout_constraintTop_toBottomOf="@id/shoe_Description_ET" />

        <Button
            android:id="@+id/cancel_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/cancel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/save_Button"
            app:layout_constraintEnd_toStartOf="@+id/save_Button"
            app:layout_constraintStart_toEndOf="@id/save_Button"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>