<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--I used constraintLayout because it used to build Responsive UI-->

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".our_Fragments.InstructionsScreen">

    <TextView
        android:id="@+id/first_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:text="@string/discount"
        android:textAlignment="center"
        android:textSize="@dimen/textSize"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/second_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:lineSpacingMultiplier="1.7"
        android:text="@string/to_take_your_discount_use_the_code_of_mo2022_when_you_do_your_first_order_and_you_can_take_more_discount_when_you_make_more_and_more_orders_when_your_buy_about_200_egp_or_above_you_have_discount_10"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_Text"
        android:textSize="@dimen/textSize" />

    <Button
        android:id="@+id/skip_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/skip"
        android:textSize="@dimen/textSize"
        app:layout_constraintTop_toBottomOf="@id/second_Text"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>